# adaptive-rate-limiter

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.redis-cluster.yml  noxfile.py  pyproject.toml  pytest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  __init__.py  conftest.py  test_bench_concurrent_scaling.py  test_bench_scheduler_overhead.py
docs/: backends.mdx  configuration.mdx  docs.json  exceptions.mdx  introduction.mdx  observability.mdx  providers.mdx  quickstart.mdx  reservation-tracking.mdx  streaming.mdx
src/adaptive_rate_limiter/: __init__.py  exceptions.py
src/adaptive_rate_limiter/_internal/: __init__.py
src/adaptive_rate_limiter/backends/: __init__.py  base.py  memory.py  redis.py
src/adaptive_rate_limiter/backends/lua/: distributed_check_and_reserve.lua  distributed_recover_orphan.lua  distributed_release_capacity.lua  distributed_release_streaming.lua  distributed_update_rate_limits.lua  distributed_update_rate_limits_429.lua
src/adaptive_rate_limiter/observability/: __init__.py  collector.py  constants.py  metrics.py  protocols.py
src/adaptive_rate_limiter/protocols/: __init__.py  classifier.py  client.py  streaming.py
src/adaptive_rate_limiter/providers/: __init__.py  base.py
src/adaptive_rate_limiter/reservation/: __init__.py  context.py  tracker.py
src/adaptive_rate_limiter/scheduler/: __init__.py  base.py  config.py  scheduler.py
src/adaptive_rate_limiter/scheduler/state/: __init__.py  cache.py  manager.py  models.py
src/adaptive_rate_limiter/strategies/: __init__.py  scheduling.py
src/adaptive_rate_limiter/strategies/modes/: __init__.py  account.py  base.py  basic.py  intelligent.py  reset_watcher.py  streaming_cleanup.py  streaming_handler.py
src/adaptive_rate_limiter/streaming/: __init__.py  context.py  iterator.py  tracker.py
src/adaptive_rate_limiter/types/: __init__.py  queue.py  rate_limit.py  request.py  resource.py
tests/: conftest.py
tests/integration/: conftest.py  test_backend_consistency.py  test_end_to_end.py  test_lua_scripts.py  test_multi_provider.py  test_redis_cluster.py
tests/unit/: test_exceptions.py  test_lazy_imports.py  test_protocols.py  test_reservation_tracker.py  test_reservation_tracker_coverage_gaps.py  test_reservation_tracker_heap_cleanup.py
tests/unit/backends/: __init__.py  test_base.py  test_memory.py  test_redis.py
tests/unit/observability/: __init__.py  test_collector.py  test_metrics.py
tests/unit/scheduler/: test_base.py  test_bundle4_fixes.py  test_cache_coverage_gaps.py  test_config.py  test_scheduler.py  test_state.py  test_state_cache_lifecycle.py  test_state_coverage_gaps.py  test_state_manager_bulk_ops.py  test_state_manager_edge_cases.py  test_state_manager_lifecycle.py  test_state_models.py  test_state_signal_handlers.py
tests/unit/strategies/: test_scheduling.py
tests/unit/strategies/modes/: __init__.py  test_account.py  test_base.py  test_basic.py  test_factory.py
tests/unit/strategies/modes/intelligent/: __init__.py  conftest.py  test_capacity_reservation.py  test_cleanup_tasks.py  test_cold_start.py  test_decision_trees.py  test_error_handling.py  test_header_parsing.py  test_initialization.py  test_metrics.py  test_queue_operations.py  test_rate_limit_state.py  test_request_execution.py  test_scheduling_loop.py  test_streaming.py
tests/unit/streaming/: test_context.py  test_iterator.py  test_tracker.py
tests/unit/types/: __init__.py  test_queue.py  test_rate_limit.py  test_request.py
