[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_rate_limiter"]

[tool.hatch.build.targets.sdist]
include = ["src/", "src/adaptive_rate_limiter/backends/lua/*.lua"]

[project]
name = "adaptive-rate-limiter"
version = "1.0.1"
description = "Adaptive rate limiting for API clients with multi-provider support"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<4.0"
authors = [{ name = "Seth Bang", email = "report@sbang.dev" }]
keywords = [
    "rate-limiting",
    "api-client",
    "adaptive",
    "throttling",
    "distributed",
    "redis",
    "scheduler",
    "concurrency",
    "openai",
    "llm",
    "ai-api",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2.0.0,<3.0.0"]

[project.urls]
Homepage = "https://github.com/sethbang/adaptive-rate-limiter"
Repository = "https://github.com/sethbang/adaptive-rate-limiter"
Documentation = "https://github.com/sethbang/adaptive-rate-limiter/blob/main/README.md"
Changelog = "https://github.com/sethbang/adaptive-rate-limiter/blob/main/CHANGELOG.md"
Issues = "https://github.com/sethbang/adaptive-rate-limiter/issues"

[project.optional-dependencies]
metrics = ["prometheus-client>=0.20.0,<1.0.0"]
redis = ["redis>=6.0.0,<8.0.0"]
full = ["prometheus-client>=0.20.0,<1.0.0", "redis>=6.0.0,<8.0.0"]
dev = [
    # Testing
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-timeout>=2.0.0,<3.0.0",
    "fakeredis>=2.26.0,<3.0.0",
    "lupa>=2.0,<3.0",
    # Build & CI
    "nox[uv]>=2025.11.12,<2026.0.0",
    "docker>=7.0,<8.0",
    # Security
    "pip-audit>=2.10.0,<3.0.0",
    "bandit>=1.9.3,<2.0.0",
    # Linting & Type Checking
    "mypy>=1.19.1,<2.0.0",
    "ruff>=0.15.0,<1.0.0",
    "pre-commit>=4.5.1",

]

# Test configuration consolidated in pytest.toml (pytest 9.0+)

[tool.bandit]
targets = ["src/"]
exclude_dirs = ["tests/", "benchmarks/"]
recursive = true
skips = ["B104"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
files = ["src/adaptive_rate_limiter"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["docs", "benchmarks"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "PTH",   # flake8-use-pathlib
]
ignore = [
    "E501", # line too long (handled by formatter)
    "S101", # use of assert (acceptable in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
    "S105",
    "S106",
] # Allow assert and hardcoded credentials in tests
"benchmarks/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["adaptive_rate_limiter"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
